@@ -1,6 +1,6 @@
 
                      Tiny Applications Collection
-                     $Date: 2005/09/22 17:13:28 $
+                     $Date: 2005/11/16 20:54:12 $
 
 Tiny Applications Collection is a set of small programs, shell scripts
 and other  things which  may be usefull  in everyday life.   There are
@@ -85,6 +85,10 @@ At the moment the collection includes:
 
  * moz2elinks.pl  -  converts  bookmarks  from  Mozilla's  to  ELinks'
    (http://elinks.or.cz) format;
+
+ * mp3rip - a command line utility for ripping tracks from CD Audio.
+   It uses cdparanoia to rip the tracks and lame to encode them to
+   MP3s.
 
  * mpd-show - tool  ment to display song currently  played in MPD.  It
    displays it  in a terminal  in one line with  background indicating
